--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   db.postgres:
-    container_name: db.postgres
+    container_name: db.postgres.main
     image: postgres:10
     environment:
       - POSTGRES_USER=admin
