--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "boom": "^7.3.0",
     "express": "^4.16.4",
     "joi": "^14.3.1",
+    "moment": "^2.24.0",
     "mysql": "^2.16.0",
     "pg": "^7.9.0",
     "readdir": "^0.1.0",
