--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch './**/*.ts' --ignore 'src/**/*.spec.ts' --exec ts-node index.ts",
+    "start": "nodemon --exec ts-node index.ts",
     "d": "nodemon --inspect './**/*.ts' --ignore 'src/**/*.spec.ts' --exec ts-node index.ts",
+    "db": "ts-node ./node_modules/typeorm/cli.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "debug": "tsc && node-debug index.js",
     "build": "tsc"
@@ -19,13 +20,18 @@
     "recursive-readdir-sync": "^1.0.6"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.16.1",
     "@types/hapi": "^18.0.1",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "^11.11.5",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "boom": "^7.3.0",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mysql": "^2.16.0",
     "pg": "^7.9.0",
