--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "sourceMap": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "outDir": "dist",
   },
   "include": [
     "src/**/*",
