--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ts-node": "^8.0.3",
     "tslint": "^6.1.1",
     "typeorm": "^0.2.15",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.3.4000",
+    "uuid": "^8.1.0"
   }
 }
