--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/joi": "^14.3.3",
-    "commander": "^2.20.0",
-    "recursive-readdir-sync": "^1.0.6",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.16.1",
     "@types/hapi": "^18.0.1",
+    "@types/joi": "^14.3.3",
     "@types/jsonwebtoken": "^8.3.5",
-    "@types/node": "^11.11.5"
+    "@types/node": "^11.11.5",
+    "commander": "^2.20.0",
+    "nodemon": "^2.0.4",
+    "recursive-readdir-sync": "^1.0.6"
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
@@ -42,7 +43,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "mysql": "^2.16.0",
+    "mysql": "^2.18.1",
     "pg": "^7.9.0",
     "readdir": "^0.1.0",
     "reflect-metadata": "^0.1.13",
